--- a/index.html
+++ b/index.html
@@ -57,6 +57,229 @@
       </form>
     </div>
   </nav>
+  <li class="collection-item avater">
+
+	<h4>Latest Application</h4><br>
+		<div class="row">
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://camscanner.en.aptoide.com/'; Wasabi.send('WAS-home-first-bundle', 'APP-CLICK');" style="cursor:pointer; cursor:hand;">
+	    <img src="utube.jpg"><a href="https://cdn6.aptoide.com/imgs/3/d/9/3d914cf0cef86ff766b19e87049e352d_icon.png?w=93" alt="camscanner phone pdf creator icon"></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>YouTube</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_half</i><br>
+		   50.01MB</p>
+	</div>
+	</div>
+	</div>
+
+		<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://whatsapp.en.aptoide.com/'; Wasabi.send('WAS-home-first-bundle', 'APP-CLICK');" style="cursor:pointer; cursor:hand;">
+	    <img src="facebook.jpeg"><a href="https://cdn6.aptoide.com/imgs/4/6/1/461638042f6303c2860627f842116ccd_icon.png?w=93" alt="whatsapp messenger icon"></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Facebook</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_border</i><br>
+		   40.7MB</p>
+	</div>
+	</div>
+	</div>
+
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://instagram.en.aptoide.com/'; Wasabi.send('WAS-home-first-bundle', 'APP-CLICK');" style="cursor:pointer; cursor:hand;">
+	    <img src="google.jpeg"><a href="https://cdn6.aptoide.com/imgs/a/c/2/ac220ba3a47a2a24c1750db0aa5bc02a_icon.png?w=93" alt="instagram icon"></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Google+</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_border</i><br>
+		   32.7MB</p>
+	</div>
+	</div>
+	</div>
+
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://facebook.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="twitter.jpeg"><a href="https://cdn6.aptoide.com/imgs/c/2/d/c2d8d5b9d6504d248dc5ddb5318159a2_icon.png?w=93" alt="facebook icon"></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Twitter</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_border</i><br>
+		   76.35MB</p>
+	</div>
+	</div>
+	</div>
+
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://messenger.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="viber.jpg"><a href="https://cdn6.aptoide.com/imgs/7/6/e/76e0376928b8393227a150fbed5d6b4a_icon.png?w=93" alt="messenger text and video chat for free icon"></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Viber</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_border</i><br>
+		   48.12MB</p>
+	</div>
+	</div>
+	</div>
+
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://clash-of-clans.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="beetalk.jpg"><a href="https://cdn6.aptoide.com/imgs/8/1/c/81c96a0ff0ed273a5c23b7610801180b_icon.png?w=93" alt="clash of clans icon"></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Beetalk</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_half</i><br>
+		   103.05MB</p>
+	</div>
+	</div>
+	</div>
+
+	</div>
+	<span><a>Show More</a></span>
+</li>
+
+	<li class="collection-item avater">
+	<h4>Local Most Downloads</h4><br>
+		<div class="row">
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://dewmobile-inc-zapya.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="wattpad.jpg"><a href="https://cdn6.aptoide.com/imgs/f/2/3/f237708e7d9cf5d0b3b2b07a7c7a6f82_icon.png?w=96" alt=""></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Wattpad</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_half</i><br>
+		   10.19MB</p>
+	</div>
+	</div>
+	</div>
+
+		<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://bagan-keyboard.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="skype.jpg"><a href="https://cdn6.aptoide.com/imgs/b/2/7/b27ef1cbdf38582799e46350b8766bfb_icon.png?w=96" alt=""></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Skype</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_border</i><br>
+		   27.18MB</p>
+	</div>
+	</div>
+	</div>
+
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://mobile-legends.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="messenger.jpg"><a href="https://cdn6.aptoide.com/imgs/e/e/3/ee310691ffbcf570e187fa81e0eca8f4_icon.png?w=96" alt=""></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Messenger</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_border</i><br>
+		   121.81MB</p>
+	</div>
+	</div>
+	</div>
+
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://tubemate-youtube-downloader.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="gmail.jpg"><a href="https://cdn6.aptoide.com/imgs/8/7/e/87ed1918707e4445210e438d658c964f_icon.png?w=96" alt=""></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Gmail</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_border</i><br>
+		   8.47MB</p>
+	</div>
+	</div>
+	</div>
+
+	<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://viber-messenger.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="candy.jpg"><a href="https://cdn6.aptoide.com/imgs/1/a/c/1ac04837939ba19813e5238d7b514af7_icon.png?w=96" alt=""></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Candy Crush</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_border</i><br>
+		   35.01MB</p>
+	</div>
+	</div>
+	</div>
+
+		<div class="col s2 m2">
+	<div class="card">
+	  <div class="card-image" onclick="location.href='https://wun-zinn.en.aptoide.com/';" style="cursor:pointer; cursor:hand;">
+	    <img src="play.jpg"><a href="https://cdn6.aptoide.com/imgs/1/8/9/189082dad82eab40c03be86b1d52019c_icon.png?w=96" alt=""></a>
+	  </div>
+	  <div class="card-content">
+		<p><strong>Play Store</strong><br>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star</i>
+		   <i class="tiny material-icons">star_half</i><br>
+		   29.66MB</p>
+	</div>
+	</div>
+	</div>
+
+	</div>
+	<span><a>Show More</a></span>
+</li>
+
+
+
+</ul>
+
           
   
       <!--JavaScript at end of body for optimized loading-->
